--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -1,109 +1,84 @@
-@import url('https://fonts.googleapis.com/css?family=Maven+Pro:400,500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Advent+Pro:400,500,600|Major+Mono+Display|Roboto:400,500,700|Varela+Round&display=swap');
+
 
 body{
-    background-color: #F3F0E9;
-    font-family: 'Maven Pro', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    background-color: #292a2b;
+}
+.a-neutro {
+    color: inherit;
+    text-decoration: none;
+}
+.a-neutro:hover {
+    color: inherit;
+    text-decoration: none;
+}
+.reset {
+    padding: 0px 0px;
+    margin: 0px 0px;
 }
 
-.opacidade {
-    opacity: 0.70;
+/*MENUBAR*/
+.head-wrapper div {
+    padding: 0px 0px;
+    margin: 0px 0px;
 }
-.head {
-    background-color: black;
-    height: 71px;
-    padding: 18px;
-    text-align: center;
-}
-.container {
-    padding: 20px;
-    padding-top: 35px;
-    color: #3E3C3C;
-}
-
-.border-side {
-    padding-left: 0;
-    padding-right: 0;
-}
-.img-perfil {
-    width: 100%;
-}
-
-.campos {
-    font-weight: 400;
-    font-size: 16px;
-    border-bottom: 1px solid #F7B197;
-    margin-bottom: 0;
-}
-.campos-dados {
-    font-weight: 400;
-    color: #000000;
-    font-size: 19px;
-    text-transform: uppercase;
-    padding-top: 0;
-}
-.datas-filmes {
-    padding-top: 20px;
-    border-bottom: 1px solid #F2D6CB;
-}
-.lista-de-filmes {
-    font-size: 16px;
-    font-weight: 300;
-    list-style: none;
-    text-transform: uppercase;
-    border-bottom: 1px solid #F2D6CB;
-    padding-left: 0;
-    padding-right: 0;
-    padding-bottom: 5px;
-}
-.check {
-    float: right;
-    padding-bottom: 15px;
-}
-/***************/
-input[type=checkbox] {
-    position: relative;
-	cursor: pointer;
-}
-input[type=checkbox]:before {
-    content: "";
+.head-wrapper {
     display: block;
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    top: 0;
-    left: 0;
-    border: 2px solid rgb(88, 87, 87);
-    border-radius: 3px;
-    background-color: #F3F0E9;
+    position: fixed;
+    
+    background-color: #1a1a1a;
+    width: 70px;
+    height: 100vh;
+    border-right: 4px solid #00eeff;
+
+    z-index: 99;
 }
-input[type=checkbox]:checked:after {
-    text-align: center;
-    content: "\2713";
-    font-size: 13px;
+.icon-logo {
+    margin-top: 15px;
+    font-size: 35px !important;
+}
+.icon-bar {
+    font-size: 24px;
     color: #ffffff;
-    display: block;
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    top: 0;
-    left: 0;
-    border: 2px solid rgb(88, 87, 87);
-    border-radius: 3px;
-    background-color: rgb(88, 87, 87);
 }
-/***************/
-.lista-de-filmes li {
-    display: inline;
-    padding-bottom: 5px;
+.icon-bar:hover {
+    transition: 1.5s;
+    cursor: pointer;
+    color: #00eeff;
 }
+.info-tab {
+    display: none;
+}
+.icons-table {
+    width: 100%;
+    height: 50vh;
+}
+.icons-table tr {
+    margin-bottom: 15px;
+}
+.mainicons-wrapper {
+    margin-top: 100px !important;
+}
+/*END_MENUBAR*/
 
-.foot {
-    background-color: rgb(24, 24, 24);
-    height: 48px;
-    padding: 12px;
-    padding-bottom: 2px !important;
-    text-align: center;
+
+
+
+h1 {
+    color: #ffffff;
+    font-size: 30px;
 }
-.logo-footer {
-    width: 67px;
+.family-1 {
+    font-family: 'Major Mono Display', monospace;
+}
+.family-2 {
+    font-family: 'Varela Round', sans-serif;
+}
+.family-3 {
+    font-family: 'Advent Pro', sans-serif;
+}
+.family-4 {
+    font-family: 'Roboto', sans-serif;
 }
